--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="font_awesome/css/all.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
 
@@ -13,11 +14,12 @@
         <div id="container">
     <!--TÊTE DE PAGE-->
     <header>
-        <nav class="navbar">
             <figure>
                 <img class="logo" src="images/logo/Reservia.svg" alt="Logo Reservia">
             </figure>
-                <ul class="navbar">
+
+            <nav>
+                <ul>
                     <li>
                         <a class="navbar hebergements2" href="#hebergements_marseille">Hébergements</a>
                     </li>
@@ -27,7 +29,7 @@
                     </li>
                 </ul>
                         <a class="navbar inscription" href="#"><strong>S'inscrire</strong></a>
-          </nav>
+            </nav>
     </header>
 
     <main>
@@ -293,13 +295,13 @@
             <p>Données et confidentialité</p>
         </div>
 
-        <div class="fin">
+        <div class="fin1">
         <h3>Nos hébergements</h3>
             <p>Charte qualité</p>
             <p>Soumettre votre hôtel</p>
         </div>
 
-        <div class="fin">
+        <div class="fin1">
         <h3>Assistance</h3>
             <p>Centre d'aide</p>
             <p>Nous contacter</p>
