--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <form action="recherche" class="rechercher">
             <i class="fas fa-map-marker-alt maps"></i>
             <input type="text" class="contour" placeholder="  Marseille, France">
-            <button type="submit" class="btn"><strong>Rechercher</strong></button>
+            <button type="submit" class="btn"><strong>Rechercher</strong>
+                <i class="fas fa-search"></i></button>
         </form>
         </div>
 
