--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul id="fonction_filtres">
                 <li>
                     <div class="cercle"><i class="fas fa-money-bill-wave"></i></div>
-                    <a class="marge" href="#">Economique</a>
+                    <a class="marge" href="#">Économique</a>
                 </li>
 
                 <li>
@@ -308,5 +308,6 @@
             <p>Nous contacter</p>
         </div>
       </footer>
+      </div>
     </body>
 </html>
