--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
-        <link rel="stylesheet" href="font_awesome/css/all.css">
+        <script src="https://kit.fontawesome.com/9b758e3bf3.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
