--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
         <section id="activites">
             <h2>Activités à Marseille</h2>
             <article>
-                    <figure class="marseille1">
+               <figure class="marseille1">
                             <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
                                 <figcaption>
                                     <h3>Vieux Port</h3>
                                 </figcaption>
-                        </figure>
+                </figure>
 
-                <div class="marseille">  
+                <div class="marseille1">  
                     <figure class="imagesmarseille1">
                         <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
                             <figcaption>
@@ -253,7 +253,7 @@
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille2">
+                    <figure class="imagesmarseille1">
                         <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
                             <figcaption>
                                 <h3>Île du Frioul</h3>
@@ -261,14 +261,14 @@
                     </figure>
                 </div>
 
-                    <figure class="marseille1">
+                    <figure class="marseille1 marseille2">
                        <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
                             <figcaption>
                                 <h3>Parc National des Calanques</h3>
                             </figcaption>
                     </figure>
                 
-                <div class="marseille">
+                <div class="marseille1">
                     <figure class="imagesmarseille1">
                        <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
                             <figcaption>
@@ -276,7 +276,7 @@
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille2">
+                    <figure class="imagesmarseille1">
                         <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
                             <figcaption>
                                 <h3>Parc Longchamp</h3>
