--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                <figure class="marseille1">
                             <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
                                 <figcaption>
-                                    <h3>Vieux Port</h3>
+                                    <h3 class="VP">Vieux Port</h3>
                                 </figcaption>
                 </figure>
 
@@ -264,7 +264,7 @@
                     <figure class="marseille1 marseille2">
                        <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
                             <figcaption>
-                                <h3>Parc National des Calanques</h3>
+                                <h3 class="PNC">Parc National des Calanques</h3>
                             </figcaption>
                     </figure>
                 
