--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
                 <div class="hebergements">
                             <figure>
-                                <img src="images/hebergements/small/auberge_la_canebiere.jpg" alt="Auberge La cannebière">
+                                <a href="#">
+                                    <img src="images/hebergements/small/auberge_la_canebiere.jpg" alt="Auberge La cannebière">
+                                </a>
                                 <figcaption>
                                     <h3>Auberge La Cannebière</h3>
                                     <p>Nuit à partir de 25 €</p>
@@ -101,7 +103,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_du_port.jpg" alt="Hôtel du port">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_du_port.jpg" alt="Hôtel du port">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52 €</p>
@@ -116,7 +120,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_des_mouettes.jpg" alt="Hôtel des mouettes">
+                                <a href="#">
+                                   <img src="images/hebergements/small/hotel_des_mouettes.jpg" alt="Hôtel des mouettes">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de 76 €</p>
@@ -131,7 +137,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_de_la_mer.jpg" alt="Hôtel de la mer">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_de_la_mer.jpg" alt="Hôtel de la mer">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46 €</p>
@@ -146,7 +154,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/auberge_le_panier.jpg" alt="Auberge Le panier">
+                                <a href="#">
+                                    <img src="images/hebergements/small/auberge_le_panier.jpg" alt="Auberge Le panier">
+                                </a>
                                 <figcaption>
                                 <h3>Auberge Le panier</h3>
                                 <p>Nuit à partir de 23 €</p>
@@ -161,7 +171,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_chez_amina.jpg" alt="Hôtel chez Amina">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_chez_amina.jpg" alt="Hôtel chez Amina">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96 €</p>
@@ -187,7 +199,9 @@
 
                 <div class="droite">
                     <figure>
-                    <img src="images/hebergements/small/hotel_du_soleil.jpg" alt="Hôtel du soleil">
+                        <a href="#">
+                            <img src="images/hebergements/small/hotel_du_soleil.jpg" alt="Hôtel du soleil">
+                        </a>
                         <figcaption>
                         <h3>Hôtel Le soleil du matin</h3>
                         <p>Nuit à partir de 128 €</p>
@@ -202,7 +216,9 @@
                     </figure>
 
                             <figure>
-                            <img src="images/hebergements/small/au_coeur_de_l_eau.jpg" alt="Au coeur de l'eau">
+                            <a href="#">
+                                <img src="images/hebergements/small/au_coeur_de_l_eau.jpg" alt="Au coeur de l'eau">
+                            </a>
                             <figcaption>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71 €</p>
@@ -217,7 +233,9 @@
                             </figure>
 
                             <figure>
-                            <img src="images/hebergements/small/hotel_tout_bleu.jpg" alt="Hôtel tout bleu et blanc">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_tout_bleu.jpg" alt="Hôtel tout bleu et blanc">
+                                </a>
                             <figcaption>
                                 <h3>Hôtel Tout bleu et blanc</h3>
                                 <p>Nuit à partir de 68 €</p>
@@ -239,7 +257,9 @@
             <h2>Activités à Marseille</h2>
             <article>
                <figure class="marseille1">
-                            <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
+                            <a href="#">
+                                <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
+                            </a>
                                 <figcaption>
                                     <h3 class="VP">Vieux Port</h3>
                                 </figcaption>
@@ -247,14 +267,18 @@
 
                 <div class="marseille1">  
                     <figure class="imagesmarseille1">
-                        <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
+                        <a href="#">
+                            <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
+                        </a>
                             <figcaption>
                                 <h3>Fort de Pomègues</h3>
                             </figcaption>
                     </figure>
 
                     <figure class="imagesmarseille1">
-                        <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
+                        <a href="#">
+                            <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
+                        </a>
                             <figcaption>
                                 <h3>Île du Frioul</h3>
                             </figcaption>
@@ -262,7 +286,9 @@
                 </div>
 
                     <figure class="marseille1 marseille2">
-                       <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
+                        <a href="#">
+                            <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
+                        </a>
                             <figcaption>
                                 <h3 class="PNC">Parc National des Calanques</h3>
                             </figcaption>
@@ -270,14 +296,18 @@
                 
                 <div class="marseille1">
                     <figure class="imagesmarseille1">
-                       <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
+                        <a href="#">
+                            <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
+                        </a>
                             <figcaption>
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </figcaption>
                     </figure>
 
                     <figure class="imagesmarseille1">
-                        <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
+                        <a href="#">
+                            <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
+                        </a>
                             <figcaption>
                                 <h3>Parc Longchamp</h3>
                             </figcaption>
