--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
-        <script src="https://kit.fontawesome.com/9b758e3bf3.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
 
     <!--CORPS DE PAGE-->
-    <body>
+    <body style="font-family:Raleway;">
         <div id="container">
     <!--TÊTE DE PAGE-->
     <header>
