--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
 
     <!--CORPS DE PAGE-->
-    <body style="font-family:Raleway;">
+    <body>
         <div id="container">
     <!--TÊTE DE PAGE-->
     <header>
