--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
@@ -36,15 +35,13 @@
     <main>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
-
-        <div class="arrondi">  
-        <form action="recherche" class="rechercher">
+ 
+        <form action="recherche" class="rechercher arrondi">
             <i class="fas fa-map-marker-alt maps"></i>
             <input type="text" class="contour" placeholder="  Marseille, France">
             <button type="submit" class="btn"><strong>Rechercher</strong>
                 <i class="fas fa-search"></i></button>
         </form>
-        </div>
 
           <nav class="filtres">
             <h2>Filtres</h2>
