--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
-        <link rel="stylesheet" href="font_awesome/css/all.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
 
@@ -13,11 +14,12 @@
         <div id="container">
     <!--TÊTE DE PAGE-->
     <header>
-        <nav class="navbar">
             <figure>
                 <img class="logo" src="images/logo/Reservia.svg" alt="Logo Reservia">
             </figure>
-                <ul class="navbar">
+
+            <nav>
+                <ul>
                     <li>
                         <a class="navbar hebergements2" href="#hebergements_marseille">Hébergements</a>
                     </li>
@@ -27,27 +29,26 @@
                     </li>
                 </ul>
                         <a class="navbar inscription" href="#"><strong>S'inscrire</strong></a>
-          </nav>
+            </nav>
     </header>
 
-    <main>
+    <!-- <main>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
-
-        <div class="arrondi">  
-        <form action="recherche" class="rechercher">
+ 
+        <form action="recherche" class="rechercher arrondi">
             <i class="fas fa-map-marker-alt maps"></i>
             <input type="text" class="contour" placeholder="  Marseille, France">
-            <button type="submit" class="btn"><strong>Rechercher</strong></button>
+            <button type="submit" class="btn"><strong>Rechercher</strong>
+                <i class="fas fa-search"></i></button>
         </form>
-        </div>
 
           <nav class="filtres">
             <h2>Filtres</h2>
             <ul id="fonction_filtres">
                 <li>
                     <div class="cercle"><i class="fas fa-money-bill-wave"></i></div>
-                    <a class="marge" href="#">Economique</a>
+                    <a class="marge" href="#">Économique</a>
                 </li>
 
                 <li>
@@ -72,18 +73,20 @@
                     <i class="fas fa-info blanc"></i>
                 </div>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
-        </div>
+        </div> -->
         
 
         <!--PARTIE DE GAUCHE SECTION HÉBERGEMENTS-->
-        <section class="hebergement">
+         <!-- <section class="hebergement">
             <article id="hebergements_marseille">
 
                 <h2>Hébergements à Marseille</h2>
 
                 <div class="hebergements">
                             <figure>
-                                <img src="images/hebergements/small/auberge_la_canebiere.jpg" alt="Auberge La cannebière">
+                                <a href="#">
+                                    <img src="images/hebergements/small/auberge_la_canebiere.jpg" alt="Auberge La cannebière">
+                                </a>
                                 <figcaption>
                                     <h3>Auberge La Cannebière</h3>
                                     <p>Nuit à partir de 25 €</p>
@@ -98,7 +101,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_du_port.jpg" alt="Hôtel du port">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_du_port.jpg" alt="Hôtel du port">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52 €</p>
@@ -113,7 +118,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_des_mouettes.jpg" alt="Hôtel des mouettes">
+                                <a href="#">
+                                   <img src="images/hebergements/small/hotel_des_mouettes.jpg" alt="Hôtel des mouettes">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de 76 €</p>
@@ -128,7 +135,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_de_la_mer.jpg" alt="Hôtel de la mer">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_de_la_mer.jpg" alt="Hôtel de la mer">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46 €</p>
@@ -143,7 +152,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/auberge_le_panier.jpg" alt="Auberge Le panier">
+                                <a href="#">
+                                    <img src="images/hebergements/small/auberge_le_panier.jpg" alt="Auberge Le panier">
+                                </a>
                                 <figcaption>
                                 <h3>Auberge Le panier</h3>
                                 <p>Nuit à partir de 23 €</p>
@@ -158,7 +169,9 @@
                             </figure>
 
                             <figure>
-                                <img src="images/hebergements/small/hotel_chez_amina.jpg" alt="Hôtel chez Amina">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_chez_amina.jpg" alt="Hôtel chez Amina">
+                                </a>
                                 <figcaption>
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96 €</p>
@@ -173,10 +186,10 @@
                             </figure>
                 </div>
                 <p class="afficher">Afficher plus</p>
-            </article>
+            </article> -->
 
             <!--PARTIE DE DROITE SECTION LES PLUS POPULAIRES-->
-            <aside id="populaires">
+            <!-- <aside id="populaires">
                 <div class="alignement">
                     <h2>Les plus populaires</h2>
                     <i class="fas fa-chart-line"></i>
@@ -184,7 +197,9 @@
 
                 <div class="droite">
                     <figure>
-                    <img src="images/hebergements/small/hotel_du_soleil.jpg" alt="Hôtel du soleil">
+                        <a href="#">
+                            <img src="images/hebergements/small/hotel_du_soleil.jpg" alt="Hôtel du soleil">
+                        </a>
                         <figcaption>
                         <h3>Hôtel Le soleil du matin</h3>
                         <p>Nuit à partir de 128 €</p>
@@ -199,7 +214,9 @@
                     </figure>
 
                             <figure>
-                            <img src="images/hebergements/small/au_coeur_de_l_eau.jpg" alt="Au coeur de l'eau">
+                            <a href="#">
+                                <img src="images/hebergements/small/au_coeur_de_l_eau.jpg" alt="Au coeur de l'eau">
+                            </a>
                             <figcaption>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71 €</p>
@@ -214,7 +231,9 @@
                             </figure>
 
                             <figure>
-                            <img src="images/hebergements/small/hotel_tout_bleu.jpg" alt="Hôtel tout bleu et blanc">
+                                <a href="#">
+                                    <img src="images/hebergements/small/hotel_tout_bleu.jpg" alt="Hôtel tout bleu et blanc">
+                                </a>
                             <figcaption>
                                 <h3>Hôtel Tout bleu et blanc</h3>
                                 <p>Nuit à partir de 68 €</p>
@@ -229,52 +248,64 @@
                             </figure>
                     </div>
             </aside>
-        </section>
+        </section> -->
 
         <!--SECTION ACTIVITÉS-->
-        <section id="activites">
+        <!-- <section id="activites">
             <h2>Activités à Marseille</h2>
             <article>
-                    <figure class="marseille1">
-                            <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
+               <figure class="marseille1">
+                            <a href="#">
+                                <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
+                            </a>
                                 <figcaption>
-                                    <h3>Vieux Port</h3>
+                                    <h3 class="VP">Vieux Port</h3>
                                 </figcaption>
-                        </figure>
+                </figure>
 
-                <div class="marseille">  
+                <div class="marseille1">  
                     <figure class="imagesmarseille1">
-                        <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
+                        <a href="#">
+                            <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
+                        </a>
                             <figcaption>
                                 <h3>Fort de Pomègues</h3>
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille2">
-                        <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
+                    <figure class="imagesmarseille1">
+                        <a href="#">
+                            <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
+                        </a>
                             <figcaption>
                                 <h3>Île du Frioul</h3>
                             </figcaption>
                     </figure>
                 </div>
 
-                    <figure class="marseille1">
-                       <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
+                    <figure class="marseille1 marseille2">
+                        <a href="#">
+                            <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
+                        </a>
                             <figcaption>
-                                <h3>Parc National des Calanques</h3>
+                                <h3 class="PNC">Parc National des Calanques</h3>
                             </figcaption>
                     </figure>
                 
-                <div class="marseille">
+                <div class="marseille1">
                     <figure class="imagesmarseille1">
-                       <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
+                        <a href="#">
+                            <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
+                        </a>
                             <figcaption>
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille2">
-                        <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
+                    <figure class="imagesmarseille1">
+                        <a href="#">
+                            <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
+                        </a>
                             <figcaption>
                                 <h3>Parc Longchamp</h3>
                             </figcaption>
@@ -282,7 +313,7 @@
                     </div>
             </article>
           </section>
-    </main>
+    </main> -->
 
     <!--PIED DE PAGE-->
     <footer>
@@ -293,13 +324,13 @@
             <p>Données et confidentialité</p>
         </div>
 
-        <div class="fin">
+        <div class="fin1">
         <h3>Nos hébergements</h3>
             <p>Charte qualité</p>
             <p>Soumettre votre hôtel</p>
         </div>
 
-        <div class="fin">
+        <div class="fin1">
         <h3>Assistance</h3>
             <p>Centre d'aide</p>
             <p>Nous contacter</p>
