--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&amp;display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
     </head>
 
@@ -33,7 +35,7 @@
             </nav>
     </header>
 
-    <!-- <main>
+    <main>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
  
@@ -74,7 +76,7 @@
                     <i class="fas fa-info blanc"></i>
                 </div>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
-        </div> -->
+        </div>
         
 
         <!--PARTIE DE GAUCHE SECTION HÉBERGEMENTS-->
@@ -311,10 +313,10 @@
                                 <h3>Parc Longchamp</h3>
                             </figcaption>
                         </figure>
-                    </div>
+                    </div> -->
             </article>
           </section>
-    </main> -->
+    </main>
 
     <!--PIED DE PAGE-->
     <footer>
