--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Reservia</title>
+        <title>Booki</title>
     </head>
 
     <!--CORPS DE PAGE-->
@@ -18,7 +18,7 @@
     <!--TÊTE DE PAGE-->
     <header>
             <figure>
-                <img class="logo" src="images/logo/Reservia.svg" alt="Logo Reservia">
+                <img class="logo" src="images/logo/Booki.png" alt="Booki">
             </figure>
 
             <nav>
@@ -31,7 +31,6 @@
                         <a class="navbar activites" href="#activites">Activités</a>
                     </li>
                 </ul>
-                        <a class="navbar inscription" href="#"><strong>S'inscrire</strong></a>
             </nav>
     </header>
 
@@ -41,7 +40,7 @@
  
         <form action="recherche" class="rechercher arrondi">
             <i class="fas fa-map-marker-alt maps"></i>
-            <input type="text" class="contour" placeholder="  Marseille, France">
+            <input type="text" class="contour" placeholder="Marseille, France">
             <button type="submit" class="btn"><strong>Rechercher</strong>
                 <i class="fas fa-search"></i></button>
         </form>
