--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <section id="activites">
             <h2>Activités à Marseille</h2>
             <article>
-               <figure class="marseille1">
+               <figure class="grandeimage">
                             <a href="#">
                                 <img src="images/activites/small/vieux_port.jpg" alt="Vieux port de Marseille">
                             </a>
@@ -267,8 +267,8 @@
                                 </figcaption>
                 </figure>
 
-                <div class="marseille1">  
-                    <figure class="imagesmarseille1">
+                <div class="deuximages">  
+                    <figure class="image1">
                         <a href="#">
                             <img src="images/activites/small/fort_de_pomegues.jpg" alt="Fort de Pomègues">
                         </a>
@@ -277,7 +277,7 @@
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille1">
+                    <figure class="image2">
                         <a href="#">
                             <img src="images/activites/small/ile_du_frioul.jpg" alt="Île du Frioul">
                         </a>
@@ -287,7 +287,7 @@
                     </figure>
                 </div>
 
-                    <figure class="marseille1 marseille2">
+                    <figure class="grandeimage">
                         <a href="#">
                             <img src="images/activites/small/les_calanques.jpg" alt="Les calanques">
                         </a>
@@ -296,8 +296,8 @@
                             </figcaption>
                     </figure>
                 
-                <div class="marseille1">
-                    <figure class="imagesmarseille1">
+                <div class="deuximages">
+                    <figure class="image1">
                         <a href="#">
                             <img src="images/activites/small/notre_dame_de_la_garde.jpg" alt="Notre-Dame-de-la-Garde">
                         </a>
@@ -306,7 +306,7 @@
                             </figcaption>
                     </figure>
 
-                    <figure class="imagesmarseille1">
+                    <figure class="image2">
                         <a href="#">
                             <img src="images/activites/small/parc_longchamp.jpg" alt="Parc Longchamp">
                         </a>
